# employee-salary-prediction

./: Dockerfile  README.md  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
models/: encoders.pkl  feature_names.pkl  lr_model.pkl  metrics.pkl
src/linear-regression/: prediction.ipynb  prediction_final.ipynb  prediction_final_executed.ipynb
src/linear-regression/models/: salary_predictor.pkl
